vc1dec: drop damaged B frames Fixes: vc1_error_spilt.avi of Ticket606

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>